--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Arraial do Cabo</td>\n",
+       "      <td>51</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>1602996372</td>\n",
+       "      <td>81</td>\n",
+       "      <td>-22.97</td>\n",
+       "      <td>-42.03</td>\n",
+       "      <td>70.00</td>\n",
+       "      <td>13.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Kapaa</td>\n",
+       "      <td>40</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1602996372</td>\n",
+       "      <td>94</td>\n",
+       "      <td>22.08</td>\n",
+       "      <td>-159.32</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>5.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Provideniya</td>\n",
+       "      <td>46</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1602996372</td>\n",
+       "      <td>88</td>\n",
+       "      <td>64.38</td>\n",
+       "      <td>-173.30</td>\n",
+       "      <td>35.53</td>\n",
+       "      <td>2.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ushuaia</td>\n",
+       "      <td>75</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>1602996373</td>\n",
+       "      <td>81</td>\n",
+       "      <td>-54.80</td>\n",
+       "      <td>-68.30</td>\n",
+       "      <td>42.80</td>\n",
+       "      <td>6.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ponta do Sol</td>\n",
+       "      <td>40</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>1602996373</td>\n",
+       "      <td>68</td>\n",
+       "      <td>32.67</td>\n",
+       "      <td>-17.10</td>\n",
+       "      <td>69.80</td>\n",
+       "      <td>14.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              City  Cloudiness Country        Date  Humidity    Lat     Lng  \\\n",
+       "0  Arraial do Cabo          51      BR  1602996372        81 -22.97  -42.03   \n",
+       "1            Kapaa          40      US  1602996372        94  22.08 -159.32   \n",
+       "2      Provideniya          46      RU  1602996372        88  64.38 -173.30   \n",
+       "3          Ushuaia          75      AR  1602996373        81 -54.80  -68.30   \n",
+       "4     Ponta do Sol          40      PT  1602996373        68  32.67  -17.10   \n",
+       "\n",
+       "   Max Temp  Wind Speed  \n",
+       "0     70.00       13.76  \n",
+       "1     75.20        5.82  \n",
+       "2     35.53        2.21  \n",
+       "3     42.80        6.93  \n",
+       "4     69.80       14.99  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "cities = pd.read_csv(\"city_data.csv\", encoding=\"utf-8\")\n",
+    "cities.head()\n"
    ]
   },
   {
@@ -60,17 +179,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "humidity = cities[\"Humidity\"].astype(float)\n",
+    "maxhumidity = humidity.max()\n",
+    "locations = cities[[\"Lat\", \"Lng\"]]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f09b8215915445f6a40f4d8cfcf9b048",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig = gmaps.figure()\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity,dissipating=False, max_intensity=maxhumidity,point_radius=3)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,10 +226,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Salalah</td>\n",
+       "      <td>0</td>\n",
+       "      <td>OM</td>\n",
+       "      <td>1602996379</td>\n",
+       "      <td>39</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>54.09</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>2.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Camargo</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>1602996440</td>\n",
+       "      <td>41</td>\n",
+       "      <td>27.67</td>\n",
+       "      <td>-105.17</td>\n",
+       "      <td>71.56</td>\n",
+       "      <td>7.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fayaoué</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>1602996493</td>\n",
+       "      <td>67</td>\n",
+       "      <td>-20.65</td>\n",
+       "      <td>166.53</td>\n",
+       "      <td>73.40</td>\n",
+       "      <td>14.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Nouadhibou</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MR</td>\n",
+       "      <td>1602996499</td>\n",
+       "      <td>60</td>\n",
+       "      <td>20.93</td>\n",
+       "      <td>-17.03</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>16.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Abu Dhabi</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AE</td>\n",
+       "      <td>1602996614</td>\n",
+       "      <td>50</td>\n",
+       "      <td>24.47</td>\n",
+       "      <td>54.37</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>3.36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         City  Cloudiness Country        Date  Humidity    Lat     Lng  \\\n",
+       "0     Salalah           0      OM  1602996379        39  17.02   54.09   \n",
+       "1     Camargo           0      MX  1602996440        41  27.67 -105.17   \n",
+       "2     Fayaoué           0      NC  1602996493        67 -20.65  166.53   \n",
+       "3  Nouadhibou           0      MR  1602996499        60  20.93  -17.03   \n",
+       "4   Abu Dhabi           0      AE  1602996614        50  24.47   54.37   \n",
+       "\n",
+       "   Max Temp  Wind Speed  \n",
+       "0     78.80        2.24  \n",
+       "1     71.56        7.56  \n",
+       "2     73.40       14.23  \n",
+       "3     75.20       16.11  \n",
+       "4     78.80        3.36  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "narrowed_city_df = cities.loc[(cities[\"Max Temp\"] > 70) & (cities[\"Max Temp\"] < 80) & (cities[\"Cloudiness\"] == 0), :]\n",
+    "narrowed_city_df = narrowed_city_df.dropna(how='any')\n",
+    "narrowed_city_df.reset_index(inplace=True)\n",
+    "del narrowed_city_df['index']\n",
+    "narrowed_city_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,10 +370,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Salalah</td>\n",
+       "      <td>0</td>\n",
+       "      <td>OM</td>\n",
+       "      <td>1602996379</td>\n",
+       "      <td>39</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>54.09</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>2.24</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Camargo</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>1602996440</td>\n",
+       "      <td>41</td>\n",
+       "      <td>27.67</td>\n",
+       "      <td>-105.17</td>\n",
+       "      <td>71.56</td>\n",
+       "      <td>7.56</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fayaoué</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>1602996493</td>\n",
+       "      <td>67</td>\n",
+       "      <td>-20.65</td>\n",
+       "      <td>166.53</td>\n",
+       "      <td>73.40</td>\n",
+       "      <td>14.23</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Nouadhibou</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MR</td>\n",
+       "      <td>1602996499</td>\n",
+       "      <td>60</td>\n",
+       "      <td>20.93</td>\n",
+       "      <td>-17.03</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>16.11</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Abu Dhabi</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AE</td>\n",
+       "      <td>1602996614</td>\n",
+       "      <td>50</td>\n",
+       "      <td>24.47</td>\n",
+       "      <td>54.37</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         City  Cloudiness Country        Date  Humidity    Lat     Lng  \\\n",
+       "0     Salalah           0      OM  1602996379        39  17.02   54.09   \n",
+       "1     Camargo           0      MX  1602996440        41  27.67 -105.17   \n",
+       "2     Fayaoué           0      NC  1602996493        67 -20.65  166.53   \n",
+       "3  Nouadhibou           0      MR  1602996499        60  20.93  -17.03   \n",
+       "4   Abu Dhabi           0      AE  1602996614        50  24.47   54.37   \n",
+       "\n",
+       "   Max Temp  Wind Speed Hotel Name  \n",
+       "0     78.80        2.24             \n",
+       "1     71.56        7.56             \n",
+       "2     73.40       14.23             \n",
+       "3     75.20       16.11             \n",
+       "4     78.80        3.36             "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotellist = []\n",
+    "\n",
+    "for i in range(len(narrowed_city_df)):\n",
+    "    lat = narrowed_city_df.loc[i]['Lat']\n",
+    "    lng = narrowed_city_df.loc[i]['Lng']\n",
+    "\n",
+    "    params = {\n",
+    "        \"location\": f\"{lat},{lng}\",\n",
+    "        \"radius\": 5000,\n",
+    "        \"types\" : \"hotel\",\n",
+    "        \"key\": g_key\n",
+    "    }\n",
+    "    \n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "    requested = requests.get(base_url, params=params)\n",
+    "    jsn = requested.json()\n",
+    "    try:\n",
+    "        hotellist.append(jsn['results'][0]['name'])\n",
+    "    except:\n",
+    "        hotellist.append(\"\")\n",
+    "narrowed_city_df[\"Hotel Name\"] = hotellist\n",
+    "narrowed_city_df = narrowed_city_df.dropna(how='any')\n",
+    "narrowed_city_df.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -117,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,18 +548,35 @@
     "\"\"\"\n",
     "# Store the DataFrame Row\n",
     "# NOTE: be sure to update with your DataFrame name\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
-    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
+    "hotel_info = [info_box_template.format(**row) for index, row in narrowed_city_df.iterrows()]\n",
+    "locations = narrowed_city_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f09b8215915445f6a40f4d8cfcf9b048",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
-    "\n",
+    "markers = gmaps.marker_layer(locations)\n",
+    "fig.add_layer(markers)\n",
+    "fig\n",
     "\n",
     "# Display figure\n"
    ]
@@ -159,9 +591,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pydev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
